# INGRION

./: README.md
Ingrion_Web/: README.md  deploy.sh  dev.sh  ingrion.service  nginx.conf
Ingrion_Web/backend/: .env.example  db.sqlite3  manage.py  requirements.txt
Ingrion_Web/backend/ingrion_project/: urls.py  wsgi.py
Ingrion_Web/frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
Ingrion_Web/frontend/src/: App.jsx  index.css
Ingrion_core/: config_peers.json  genesis.json  go.mod  main.go  time.py  whitelist.json
Ingrion_core/ingrion-1/blocks/: block_0.json  block_1.json  block_10.json  block_11.json  block_12.json  block_13.json  block_14.json  block_15.json  block_2.json  block_3.json  block_4.json  block_5.json  block_6.json  block_7.json  block_8.json  block_9.json
Ingrion_exe/: DEVELOPER_GUIDE.md  build-all-roles.ps1  diagnose.ps1  index.html  package-lock.json  package.json  tailwind.config.js
Ingrion_exe/src/: App.tsx  index.css  main.tsx
Ingrion_exe/src-tauri/: Cargo.toml  build-all-roles.ps1  tauri.conf.company.json  tauri.conf.json  tauri.conf.regulator.json  tauri.conf.user.json  tauri.conf.validator.json
Ingrion_exe/src-tauri/capabilities/: default.json
Ingrion_exe/src-tauri/icons/: icon.icns
Ingrion_exe/src-tauri/src/: lib.rs
National_Identity_Archive/: README.md  dev.sh
National_Identity_Archive/backend/: .env.example  gov_archive.db  manage.py  requirements.txt
National_Identity_Archive/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
(+102 files in other folders)
